[package]
name = "sysinfo_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29"
hyper = { version = "0.14", features = ["full"] }
clap = "2.34"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
